{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 96,
  "lineage": "bc21df0c-1b68-3b36-39e5-57961e59cc3f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0cf6f02e305e95b7e"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0cf6f02e305e95b7e"
                ]
              }
            ],
            "id": "igw-0e0c1255dac21c7a6",
            "internet_gateway_id": "igw-0e0c1255dac21c7a6",
            "owner_id": "135928476890",
            "tags": {
              "Name": "rs-igw-jenkins-test"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad88f6fd1dab33ce",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-029d63a2ec1e50a82",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-029d63a2ec1e50a82",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "shark-terra",
            "monitoring": false,
            "primary_network_interface_id": "eni-091bef9a5222b6d40",
            "private_dns": "ip-10-10-101-215.eu-west-1.compute.internal",
            "private_ip": "10.10.101.215",
            "public_dns": "ec2-34-245-180-126.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.180.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01b190e4eb0a1bcd9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b756abce5c6a0972",
            "tags": {
              "Name": "shark-destroy-this-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-051397872343b4ef8"
            ]
          },
          "depends_on": [
            "aws_key_pair.deployer",
            "aws_security_group.shark-secu-group",
            "aws_subnet.subn",
            "data.template_file.app_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03e6ecb396c722ebf",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0c1255dac21c7a6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shark-destroy-thismain"
            },
            "vpc_id": "vpc-0cf6f02e305e95b7e"
          },
          "depends_on": [
            "data.aws_internet_gateway.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c76004d2a6f80cf",
            "route_table_id": "rtb-03e6ecb396c722ebf",
            "subnet_id": "subnet-0b756abce5c6a0972"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.subn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shark-secu-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-051397872343b4ef8",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-051397872343b4ef8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "212.161.55.68/32"
                ],
                "description": "Allows ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "86.173.71.40/32"
                ],
                "description": "Allows ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "shark-secu-group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shark-destroy-this-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf6f02e305e95b7e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0b756abce5c6a0972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.101.0/24",
            "id": "subnet-0b756abce5c6a0972",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "shark-destroy-this-subnet"
            },
            "vpc_id": "vpc-0cf6f02e305e95b7e"
          }
        }
      ]
    }
  ]
}